ticket 4246, fixed misaligned content bug

--- a/assets/css/common.less
+++ b/assets/css/common.less
@@ -119,9 +119,12 @@ article {
   }
 }
 
-.entry-summary, .entry-content, .page-content, .main-content {
+.entry-summary, .entry-content, .page-content {
   margin: 0px 0px 15px 0px;
+}
 
+.entry-summary, .entry-content, .page-content, .main-content {
+  
   // iframe container
   .entry-content-asset {
     position: relative;
